--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stc-replace",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Content replace for stc, Support string & regular expression",
   "main": "lib/index.js",
   "scripts": {
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/stcjs/stc-replace#readme",
   "dependencies": {
+    "babel-runtime": "^6.11.6",
     "stc-helper": "^1.0.0",
     "stc-plugin": "^1.0.1"
   },
